@@ -1,1 +1,1 @@
-Better cron support for script/autostart.sh
+Minor changes
