@@ -1,3 +1,9 @@
+2007-04-19    <tino@firebird.03.softkill.net>
+
+	* ptybuffer.c (file_out): removed deprecated cast of lvalue (there
+	are things which are hard to explain if you don't know what this
+	is).
+
 2007-04-07    <tino@firebird.03.softkill.net>
 
 	* script/autostart.sh: Typo corrected (startd -> started)
